# HENRI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cli.py  docker-compose.yml  k6s.yaml  pyproject.toml
.azure-pipelines/: build-and-push.yaml  deploy-test.yaml  pr-validation.yaml
.governance/: README.md
backend/grafana_client/: bandwidth.py  client.py  dashboards.py  registry_builder.py
backend/henri/: run_all.py
backend/netbox_client/: client.py
backend/osint/: acled.py  ioda.py  risk_scorer.py
backend/snow_analyse/: baseline_report.py  precursor.py  surge_detector.py
backend/snow_extract/: config.py
data/fixtures/: categories_sample.csv  cf_bgp_hijacks.json  cf_bgp_leaks.json  cf_netflows_ss_7d.json  cf_outages_90d.json  cmdb_ci_empty.csv  grafana_registry.json  incidents_april2026.csv  incidents_avril2026.csv  incidents_march2026.csv  ioda_alerts_ss_30d.json  ioda_summary_7d.json  locations.csv  netbox_circuits.json  netbox_devices.json  netbox_providers.json  netbox_sites.json
data/reference/: circuits.json  delegations.json  netbox_site_map.json  subsite_map.json
deploy/base/: kustomization.yaml
documents/: architecture-brief.md  henri-dashboard-revision-prompt.md  henri-design-system-prompt.md  henri-etu-connectivity-prompt.md  phase0-claude-code-prompt.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
grafana_client/: bandwidth.py  client.py  dashboards.py  site_status.py
snow_analyse/: baseline_report.py  surge_detector.py  timeseries.py
snow_extract/: config.py  exporter.py
snow_parse/: delegation_registry.py  human_parser.py  location_normaliser.py  prometheus_parser.py
src/: cli.py
src/grafana_client/: bandwidth.py  client.py  registry_builder.py
src/henri/: __main__.py  delta.py  forward_alert.py  logging.py  run_all.py
src/netbox_client/: circuit_enrichment.py  site_matcher.py
src/osint/: acled.py  cloudflare.py  ioda.py  risk_scorer.py
src/snow_analyse/: baseline_report.py  (+1 more)
templates/: baseline_report.html.j2
tests/: test_bandwidth.py  test_baseline_report.py  test_connectivity_api.py  test_delegation_registry.py  test_etu.py  test_fixtures_api.py  test_grafana_client.py  test_grafana_registry_builder.py  test_henri_pipeline.py  test_human_parser.py  test_location_normaliser.py  test_netbox.py  test_osint.py  test_parser.py  test_pipeline_integration.py  test_precursor.py  test_prometheus_parser.py  test_security.py  test_surge_detector.py  test_timeseries.py  test_web_api.py  test_web_phase3b.py
(+67 files in other folders)
